--- a/.github/workflows/auto-generate.yml
+++ b/.github/workflows/auto-generate.yml
@@ -5,56 +5,23 @@ on:
     - cron: "0 0 * * *"  # 每天凌晨运行
   push:
     branches:
-      - main  # 当 main 分支有新代码时触发
+      - main  # 触发 main 分支的变动
 
 jobs:
   generate_and_push:
-    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 环境
+    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 系统环境
     steps:
-    # Step 1: 检出代码仓库
+    # Step 1: 检出仓库代码
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # Step 2: 生成代码
+    # Step 2: 自动生成代码
     - name: Generate code
       run: |
         echo "# This is an auto-generated Python script" > generated_code.py
-        echo "def auto_function():" >> generated_code.py
-        echo "    print('This code was generated automatically!')" >> generated_code.py
-        echo "auto_function()" >> generated_code.py
-
-    # Step 3: 提交并推送代码
-    - name: Commit and Push changes
-      run: |
-        git config --global user.name "GitHub Actions Bot"
-        git config --global user.email "actions@github.com"
-        git add .
-        git commit -m "Auto-generated code"
-        git push
-name: Auto Generate and Push Code
-
-on:
-  schedule:
-    - cron: "0 0 * * *"  # 每天凌晨运行
-  push:
-    branches:
-      - main  # 当 main 分支有新代码时触发
-
-jobs:
-  generate_and_push:
-    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 环境
-    steps:
-    # Step 1: 检出代码仓库
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    # Step 2: 生成代码
-    - name: Generate code
-      run: |
-        echo "# This is an auto-generated Python script" > generated_code.py
-        echo "def auto_function():" >> generated_code.py
-        echo "    print('This code was generated automatically!')" >> generated_code.py
-        echo "auto_function()" >> generated_code.py
+        echo "def hello_world():" >> generated_code.py
+        echo "    print('Hello, GitHub Actions!')" >> generated_code.py
+        echo "hello_world()" >> generated_code.py
 
     # Step 3: 提交并推送代码
     - name: Commit and Push changes
