--- a/.github/workflows/auto-generate.yml
+++ b/.github/workflows/auto-generate.yml
@@ -5,11 +5,11 @@ on:
     - cron: "0 0 * * *"  # 每天凌晨运行
   push:
     branches:
-      - main  # 触发 main 分支的变动
+      - main  # 当 main 分支有新代码时触发
 
 jobs:
   generate_and_push:
-    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 系统环境
+    runs-on: ubuntu-latest
     steps:
     # Step 1: 检出仓库代码
     - name: Checkout repository
@@ -21,13 +21,19 @@ jobs:
         echo "# This is an auto-generated Python script" > generated_code.py
         echo "def hello_world():" >> generated_code.py
         echo "    print('Hello, GitHub Actions!')" >> generated_code.py
+        echo "    print('Generated on $(date)')" >> generated_code.py  # 添加时间戳
         echo "hello_world()" >> generated_code.py
 
     # Step 3: 提交并推送代码
     - name: Commit and Push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
         git add .
-        git commit -m "Auto-generated code"
-        git push
+        if ! git diff-index --quiet HEAD; then
+          git commit -m "Auto-generated code - $(date)"
+          git push
+        else
+          echo "No changes to commit."
