--- a/.github/workflows/auto-generate.yml
+++ b/.github/workflows/auto-generate.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     # Step 1: 检出代码仓库
     - name: Checkout repository
-      uses: actions/checkout@v4  # 确保使用支持 Node.js 20 的版本
+      uses: actions/checkout@v4
 
     # Step 2: 自动生成代码
     - name: Generate code
@@ -31,8 +31,9 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
+        git remote set-url origin "https://${{ secrets.GITHUB_TOKEN }}@github.com/2021baba/upload.git"
+        git pull origin main --rebase  # 拉取远程更改
         git add .
-        # 检查是否有更改
         if ! git diff-index --quiet HEAD; then
           git commit -m "Auto-generated code - $(date)"
           git push
