--- a/.github/workflows/auto-generate.yml
+++ b/.github/workflows/auto-generate.yml
@@ -24,19 +24,27 @@ jobs:
         echo "    print('Generated on $(date)')" >> generated_code.py
         echo "hello_world()" >> generated_code.py
 
-    # Step 3: 检查并提交更改
+    # Step 3: 强制拉取远程更改并提交推送
     - name: Commit and Push changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        # 配置 Git 用户信息
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
+        
+        # 配置远程仓库 URL
         git remote set-url origin "https://${{ secrets.GITHUB_TOKEN }}@github.com/2021baba/upload.git"
-        git pull origin main --rebase  # 拉取远程更改
+        
+        # 强制重置到远程分支的最新状态
+        git fetch origin main
+        git reset --hard origin/main
+        
+        # 添加更改并提交
         git add .
         if ! git diff-index --quiet HEAD; then
           git commit -m "Auto-generated code - $(date)"
-          git push
-        else
-          echo "No changes to commit."
         fi
+        
+        # 推送更改到远程分支
+        git push -f  # 强制推送（不建议在受保护的分支使用）
